Update wufoo round 2.css

--- a/wufoo round 2.css
+++ b/wufoo round 2.css
@@ -3,16 +3,16 @@
 }
 
 h1#logo {
-  height: 40px;
-	display: block;
-	background: url('https://image.connect.allpointsfps.com/lib/fe37157175640478701177/m/1/ecfaa056-e33b-43d2-81ea-ab522564cbff.png') !important;
-	background-position:center !important;
-	background-size:contain !important;
-	background-repeat:no-repeat !important;
-	overflow: hidden;
-	border-radius:10px;
-  
+    height: 40px !important;
+    display: block !important;
+    background: url('https://image.connect.allpointsfps.com/lib/fe37157175640478701177/m/1/ecfaa056-e33b-43d2-81ea-ab522564cbff.png') !important;
+    background-position: center !important;
+    background-size: contain !important;
+    background-repeat: no-repeat !important;
+    overflow: hidden !important;
+    border-radius: 10px !important;
 }
+
 
 form#form87.wufoo.topLabel.page
 { background-color: #003D77 !important;
